# protocol-vara

./: .binpath  .gitignore  .prettierrc  Cargo.toml  README.md  build-tests.sh  build.rs  build.sh  rust-toolchain.toml  tests.sh
.cargo/: config.toml
.github/workflows/: tests.yml
calc/decimal/: Cargo.toml
calc/decimal/decimal_core/: Cargo.toml
calc/decimal/decimal_core/src/: base.rs  big_ops.rs  by_number.rs  checked_ops.rs  factories.rs  lib.rs  ops.rs  others.rs  uint_casts.rs
calc/decimal/src/: lib.rs  traits.rs  uint.rs
calc/math/: Cargo.toml  clamm.rs  consts.rs  lib.rs  log.rs
calc/math/types/: fee_growth.rs  fixed_point.rs  liquidity.rs  mod.rs  percentage.rs  seconds_per_liquidity.rs  sqrt_price.rs  token_amount.rs
calc/traceable_result/: Cargo.toml  lib.rs
extended-vft/: README.md
extended-vft/app/: Cargo.toml
extended-vft/app/src/: lib.rs
extended-vft/app/src/services/: mod.rs
extended-vft/app/src/services/extended_vft/: funcs.rs  mod.rs
extended-vft/app/tests/: node_test.rs  test.rs
extended-vft/app/tests/utils_gclient/: mod.rs
extended-vft/wasm/: Cargo.toml  build.rs
extended-vft/wasm/src/: lib.rs
fungible-token/: Cargo.toml
fungible-token/io/: Cargo.toml
fungible-token/io/src/: lib.rs
fungible-token/src/: lib.rs  tests.rs
fungible-token/state/: Cargo.toml
gear-erc20/app/: Cargo.toml
gear-erc20/app/src/: lib.rs
gear-erc20/app/src/services/: mod.rs  utils.rs
gear-erc20/app/src/services/admin/: funcs.rs  mod.rs
gear-erc20/app/src/services/aggregated/: mod.rs
gear-erc20/app/src/services/erc20/: funcs.rs  mod.rs  storage.rs  utils.rs
gear-erc20/app/src/services/pausable/: mod.rs
gear-erc20/app/src/services/roles/: funcs.rs  mod.rs  storage.rs  utils.rs
gear-erc20/app/tests/: node_test.rs  test_gtest.rs
gear-erc20/app/tests/utils_gclient/: mod.rs
gear-erc20/app/tests/utils_gtest/: mod.rs
gear-erc20/wasm/: Cargo.toml  build.rs  erc20.idl
gear-erc20/wasm/src/: lib.rs
io/: Cargo.toml
io/src/: errors.rs  lib.rs
io/src/collections/: fee_tiers.rs  mod.rs
io/src/storage/: fee_tier.rs  mod.rs
scripts/: package-lock.json  package.json  tsconfig.json
scripts/src/: create-pool.ts  create-position.ts  deploy-invariant.ts  deploy-tokens.ts  index.ts  query-tickmap.ts  setup.ts  swap.ts
sdk/: .eslintrc  .npmignore  README.md  build.sh  fix-generate.js  lib.ts  mocharc.json  package-lock.json  package-wasm.sh  package.json  publish-wasm.sh  tests.sh  tsconfig.json
sdk-usage/: .env.example  package-lock.json  package.json
sdk/contracts/extended_vft/: extended_vft.idl  extended_vft.opt.wasm  extended_vft.wasm
sdk/contracts/fungible_token/: fungible_token.meta.txt  fungible_token.opt.wasm
sdk/contracts/gear_erc20/: gear_erc20.idl  gear_erc20.opt.wasm
sdk/contracts/invariant/: invariant.idl  invariant.meta.txt  invariant.opt.wasm
sdk/src/: computed-consts.ts  consts.ts  erc20-token.ts  erc20.ts  event-listener.ts  event_listener.ts  fungible-token.ts  fungible_token.ts  fungilbe_token.ts  index.ts  invariant-contract.ts  invariant.ts  network.ts  node.ts  schema.ts  test-utils.ts  utils.ts  wasm-serializer.ts
sdk/src/wasm/: Cargo.toml  clamm.rs  consts.rs  custom.rs  helpers.rs  lib.rs  log.rs  math.rs  swap.rs
sdk/src/wasm/collections/: mod.rs  tickmap.rs
sdk/src/wasm/storage/: errors.rs  events.rs  fee_tier.rs  invariant_config.rs  mod.rs  pool.rs  pool_key.rs  position.rs  swap_simulation.rs  tick.rs
sdk/src/wasm/types/: fee_growth.rs  fixed_point.rs  helpers.rs  liquidity.rs  mod.rs  percentage.rs  price.rs  seconds_per_liquidity.rs  sqrt_price.rs  token_amount.rs
sdk/src/wasm/wasm_wrapper/: Cargo.toml
sdk/src/wasm/wasm_wrapper/src/: conversion.rs  export.rs  helpers.rs  lib.rs
sdk/tests/: batch.test.ts  deposits.test.ts  events.test.ts  example.test.ts  fungible-token.test.ts  get-liquidity-ticks.test.ts  get-position-with-associates.test.ts  get-positions.test.ts  get-tickmap.test.ts  invariant.test.ts  math.test.ts  position.test.ts  protocol-fee.test.ts  query-on-pair.test.ts  query-sizes.test.ts  simulate-invariant-swap.test.ts  testnet-get-liquidity-ticks-limit.test.ts  testnet-max-tick-cross.test.ts  testnet-tickmap-limit.test.ts  vara-deposits.test.ts
src/: invariant_service.rs  invariant_storage.rs  lib.rs
src/app/: Cargo.toml
src/app/src/: invariant_service.rs  lib.rs
src/contracts/: Cargo.toml  errors.rs  lib.rs  mod.rs
src/contracts/collections/: fee_tiers.rs  mod.rs  pool_keys.rs  pools.rs  positions.rs  tickmap.rs  ticks.rs
src/contracts/logic/: liquidity_result.rs  mod.rs
src/contracts/storage/: awaiting_transfers.rs  fee_tier.rs  mod.rs  pool.rs  pool_key.rs  position.rs  tick.rs  utils.rs
src/decimal/: Cargo.toml
src/e2e/: add_fee_tier.rs  change_fee_receiver.rs  create_pool.rs  end2end.rs  get_pools.rs  init.rs  mod.rs  position.rs  position_list.rs  position_slippage.rs
src/e2e/gclient/: change_fee_receiver.rs  init.rs  mod.rs  position.rs  position_slippage.rs  remove_fee_tier.rs
src/e2e/gtest/: add_fee_tier.rs  add_pool.rs  balances.rs  balances_vara.rs  change_fee_receiver.rs  change_fee_tiers.rs  change_protocol_fee.rs  claim.rs  claim_lost_tokens.rs  create_pool.rs  cross.rs  cross_both_sides.rs  get_liquidity_ticks.rs  get_pool.rs  get_pool_keys.rs  get_pools.rs  get_position_ticks.rs  get_position_with_associates.rs  get_positions.rs  get_tickmap.rs  init.rs  interaction_with_pool_on_remove_fee_tier.rs  limits.rs  liquidity_gap.rs  max_tick_cross.rs  mod.rs  multiple_swap.rs  position.rs  position_list.rs  position_slippage.rs  protocol_fee.rs  remove_fee_tier.rs  slippage.rs  swap.rs  swap_route.rs  test_init_tokens.rs
src/math/: clamm.rs  log.rs  mod.rs  sqrt_price.rs
src/math/types/: fee_growth.rs  fixed_point.rs  liquidity.rs  percentage.rs  seconds_per_liquidity.rs  sqrt_price.rs  (+1 more)
src/test_helpers/: consts.rs  mod.rs  utils.rs
src/traceable_result/: Cargo.toml
src/wasm/: Cargo.toml  build.rs  invariant.idl
src/wasm/src/: lib.rs
state/: Cargo.toml
state/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+100 files in other folders)
