[package]
name = "invariant"
version.workspace = true
edition.workspace = true

[dependencies]
gcore.workspace = true
gear-core.workspace = true
gstd.workspace = true
traceable_result.workspace = true
math.workspace = true
decimal.workspace = true
io.workspace = true
contracts.workspace = true
sails-rs.workspace = true
futures = { version = "0.3.30", features = [
  "async-await",
], default-features = false }

[build-dependencies]
gcore.workspace = true
gear-core.workspace = true
gstd.workspace = true
gear-wasm-builder.workspace = true
gmeta.workspace = true
io.workspace = true
sails-idl-gen.workspace = true

[dev-dependencies]
gtest.workspace = true
gclient.workspace = true
tokio.workspace = true
gstd = { workspace = true, features = ["debug"] }

[features]
binary-vendor = []
wasm-opt = ["gear-wasm-builder/wasm-opt"]
default = ["binary-vendor", "wasm-opt"]
test = ["gstd/debug"]

[workspace]
members = ["xtask", "gear-erc20/wasm", "src/wasm"]
package.version = "0.1.0"
package.edition = "2021"

[workspace.dependencies]
# Library dependencies
decimal.path = "calc/decimal"
math.path = "calc/math"
traceable_result.path = "calc/traceable_result"
contracts.path = "src/contracts"

# Local contracts
gear-erc20.path = "gear-erc20/app"
invariant.path = "."
# Contract dependencies
io.path = "io"

# Gear dependencies
gstd = "1.4.2"
gtest = "1.4.2"
gear-core = "1.4.2"
gcore = "1.4.2"
gsys = "1.4.2"
gear-wasm-builder = "1.4.2"
gwasm-builder = {version = "1.4.2", package = "gear-wasm-builder"}
gmeta = "1.4.2"
gclient = "1.4.2"
gear-core-errors = "1.4.2"
sails-idl-gen = "0.2.0" # { git = "https://github.com/gear-tech/sails", rev = "31a3c1a06817b69040af0c069967dd0b31c9530b" }
sails-rs = "0.2.0" # { git = "https://github.com/gear-tech/sails", rev = "31a3c1a06817b69040af0c069967dd0b31c9530b" }

# External
tokio = { version = "1.36", features = ["full"] }
xshell = "0.2"
anyhow = "1"  
log = "*"
env_logger = "*"
primitive-types = { version = "*", default-features = false }