[package]
name = "invariant"
version.workspace = true
edition.workspace = true

[dependencies]
traceable_result.workspace = true
math.workspace = true
decimal.workspace = true
io.workspace = true
contracts.workspace = true
sails-rs.workspace = true
parity-scale-codec.workspace = true
scale-info.workspace = true
gstd.workspace = true
futures = { version = "0.3.30", features = [
  "async-await",
], default-features = false }

[build-dependencies]
gear-wasm-builder.workspace = true
io.workspace = true
sails-idl-gen.workspace = true
gear-wasm-instrument.workspace = true

[dev-dependencies]
gtest.workspace = true
gclient.workspace = true
tokio.workspace = true
gstd = { workspace = true, features = ["debug"] }
gear-wasm-instrument.workspace = true

[features]
binary-vendor = []
wasm-opt = ["gear-wasm-builder/wasm-opt"]
default = ["binary-vendor", "wasm-opt"]
test = ["gstd/debug"]

[workspace]
members = ["xtask", "extended-vft/wasm", "src/wasm"]
package.version = "0.1.0"
package.edition = "2021"

[workspace.dependencies]
# Library dependencies
decimal.path = "calc/decimal"
math.path = "calc/math"
traceable_result.path = "calc/traceable_result"
contracts.path = "src/contracts"

# Local contracts
extended-vft.path = "extended-vft/app"
invariant.path = "."
# Contract dependencies
io.path = "io"

# Gear dependencies
gtest = "1.5.0"
gclient = "1.5.0"
gstd = "1.5.0"
sails-idl-gen = "=0.3.0"
sails-rs = "=0.3.0"
gear-wasm-builder = "1.5.0"
gear-wasm-instrument = "=1.5.0"
sails-client-gen = "=0.3.0"
gear-core = "1.5.0"
vft-service = { git = "https://github.com/gear-foundation/standards" }

# External
parity-scale-codec = { version = "3.6.4", default-features = false }
scale-info = { version = "2.5.0", default-features = false }
tokio = { version = "1.36", features = ["full"] }
xshell = "0.2"
anyhow = "1"
log = "*"
env_logger = "*"
