[package]
name = "fungible-token-state"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
fungible-token-io.workspace = true
gstd.workspace = true
gmeta = { workspace = true, features = ["codegen"] }

[build-dependencies]
gear-wasm-builder = { workspace = true, features = ["metawasm"] }
