[package]
name = "gear-erc20"
version.workspace = true
edition.workspace = true
license = "GPL-3.0"

[dependencies]
gstd.workspace = true
primitive-types.workspace = true
log.workspace = true
sails-rs.workspace = true
gcore.workspace = true
gear-core.workspace = true

[dev-dependencies]
env_logger.workspace = true
gclient.workspace = true
gtest.workspace = true
gear-core.workspace = true
tokio = "1"

[build-dependencies]
gear-wasm-builder.workspace = true
gcore.workspace = true
gear-core.workspace = true
gmeta.workspace = true
gtest.workspace = true
gsys.workspace = true
gclient.workspace = true
galloc.workspace = true
actor-system-error.workspace = true
gear-core-errors.workspace = true
gear-common-codegen.workspace = true
gear-sandbox.workspace = true
gear-sandbox-env.workspace = true
gear-sandbox-host.workspace = true
numerated.workspace = true
gear-wasm-instrument.workspace = true
gsdk-codegen.workspace = true
gear-stack-buffer.workspace = true
gear-ss58.workspace = true
gear-node-wrapper.workspace = true

[features]
default = []
test = ["gstd/debug"]
