[package]
name = "gear-erc20"
version.workspace = true
edition.workspace = true
license = "GPL-3.0"

[dependencies]
gstd.workspace = true
log.workspace = true
sails-rs.workspace = true

[dev-dependencies]
gear-core.workspace = true
env_logger.workspace = true
gclient.workspace = true
gtest.workspace = true
tokio = "1"

[build-dependencies]
gear-wasm-builder.workspace = true

[features]
default = []
test = ["gstd/debug"]
