[package]
name = "invariant-wasm"
version.workspace = true
edition.workspace = true

[dependencies]
invariant.workspace = true

[build-dependencies]
invariant.workspace = true
gear-wasm-builder.workspace = true
sails-idl-gen.workspace = true
gtest.workspace = true
gsys.workspace = true
gclient.workspace = true
galloc.workspace = true
actor-system-error.workspace = true
gear-core-errors.workspace = true
gear-common-codegen.workspace = true
gear-sandbox.workspace = true
gear-sandbox-env.workspace = true
gear-sandbox-host.workspace = true
numerated.workspace = true
gear-wasm-instrument.workspace = true
gsdk-codegen.workspace = true
gear-stack-buffer.workspace = true
gear-ss58.workspace = true
gear-node-wrapper.workspace = true

[features]
default = []
test = ["invariant/test"]