[package]
name = "invariant-wasm"
version.workspace = true
edition.workspace = true

[dependencies]
invariant.workspace = true

[build-dependencies]
invariant.workspace = true
gear-wasm-builder.workspace = true
sails-idl-gen.workspace = true
gtest.workspace = true
gclient.workspace = true
gear-wasm-instrument.workspace = true

[features]
default = []
test = ["invariant/test"]