[package]
name = "invariant-vara-wasm"
version = "0.1.0"
authors = ["Invariant Labs"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[lib]
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Contract dependencies
decimal.path = "../../../calc/decimal"
traceable_result.path = "../../../calc/traceable_result"

# External dependencies
wasm-bindgen = "0.2.89"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
tsify = "0.4.5"
paste = "1.0.14"
js-sys = "0.3.66"
