[package]
name = "invariant-vara-wasm"
version = "0.1.0"
authors = ["Invariant Labs"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[lib]
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Contract dependencies
decimal = {path = "../../../calc/decimal", features = ["invariant-wasm"], default-features = false}
traceable_result.path = "../../../calc/traceable_result"
wasm_wrapper = { path = "./wasm_wrapper"}

# External dependencies
wasm-bindgen = {version = "0.2.89",  default-features = false}
serde = { version = "1.0", features = ["derive"],  default-features = false }
serde-wasm-bindgen = {version = "0.6.3", default-features = false}
tsify = "0.4.5"
paste = "1.0.14"
js-sys = "0.3.66"
console_error_panic_hook = "0.1.7"